<?xml version="1.0"?>
<package format="2">
  <name>realsense_publisher</name>
  <version>0.0.1</version>
  <description>Custom RealSense ROS 1 wrapper that publishes color images</description>
  <maintainer email="lumen.yang@lumeny.io">Jiaye Yang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>librealsense2</depend>
</package>
